--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -67,7 +67,66 @@
         <!--====== Header End ======-->
 
         
-        <!--====== Header Start ======-->
+        <!--====== Header Hero-area Start ======-->
+
+
+        <!--====== Header Hero-area img Start ======-->
+        <div class="header-img">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="d-table">
+                            <div class="d-table-cell">
+                                <div class="header-content">
+                                    <h1>Welcome To <span>Mehedi!</span></h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
+                                    <a href="#">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--====== Header Hero-area img Start ======-->
+
+
+        <!--====== Header Hero-area End ======-->
+
+
+        <!--====== About section Start ======-->
+
+        <section class="nandine-about section-padding">
+            <!-- About Heading -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="section-header">
+                            <h2>About <span>Us</span></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- About Content-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="about-left">
+                            <img src="assets/img/about-img.jpg" alt="About">
+                            <div class="about-left-details">
+                                <h4>Hanly</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!--====== About section End ======-->
+
+
+
 
 
         <!--==================================================================-->
