--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -115,6 +115,12 @@
                             <img src="assets/img/about-img.jpg" alt="About">
                             <div class="about-left-details">
                                 <h4>Hanly</h4>
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
