--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -108,13 +108,14 @@
                 </div>
             </div>
             <!-- About Content-->
-            <div class="container">
+            <div class="container content-top-space">
                 <div class="row">
+                    <!-- About-image -->
                     <div class="col-md-4">
                         <div class="about-left">
                             <img src="assets/img/about-img.jpg" alt="About">
                             <div class="about-left-details">
-                                <h4>Hanly</h4>
+                                <h4>Mehedi Amin</h4>
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -122,6 +123,15 @@
                                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                                 </ul>
                             </div>
+                        </div>
+                    </div>
+                    <!-- About Main Content -->
+                    <div class="col-md-8">
+                        <div class="about-right">
+                            <h3>I'm a freelance web developer with 3+ years of experience</h3>
+                            <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Nemo animi soluta ratione quisquam, dicta ab cupiditate iure eaque? Repellendus voluptatum, magni impedit eaque delectus, beatae maxime temporibus maiores quibusdam quasi.Rem magnam ad perferendis iusto sint tempora ea voluptatibus iure, animi excepturi modi aut possimus in hic molestias repellendus illo ullam odit quia velit. Qui expedita sit quo, maxime molestiae.</p>
+                            <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Nemo animi soluta ratione quisquam, dicta ab cupiditate iure eaque? Repellendus voluptatum, magni impedit eaque delectus, beatae maxime temporibus maiores quibusdam quasi.Rem magnam ad perferendis iusto sint tempora ea voluptatibus iure, animi excepturi modi aut possimus in hic molestias repellendus illo ullam odit quia velit. Qui expedita sit quo, maxime molestiae.</p>
+                            <a href="#">Resume / Cv <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
