play videos section edite

--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -69,7 +69,6 @@
         
         <!--====== Header Hero-area Start ======-->
 
-
         <!--====== Header Hero-area img Start ======-->
         <div class="header-img">
             <div class="container">
@@ -89,7 +88,6 @@
             </div>
         </div>
         <!--====== Header Hero-area img Start ======-->
-
 
         <!--====== Header Hero-area End ======-->
 
@@ -141,6 +139,20 @@
 
         <!--====== About section End ======-->
 
+        <section class="video-area section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="text">
+                            <h2>Want to Know More About Us ?</h2>
+                        </div>
+                        <div class="video-icon">
+                            <a id="Youtube-video" href="https://www.youtube.com/watch?v=_MTbjHKtobY&list=RD_NuwRxt5xPE&index=5"><i class="fa fa-play"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
