My skill section complite

--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -139,6 +139,8 @@
 
         <!--====== About section End ======-->
 
+        <!--====== Video area section start ======-->
+
         <section class="video-area section-padding">
             <div class="container">
                 <div class="row">
@@ -147,12 +149,153 @@
                             <h2>Want to Know More About Us ?</h2>
                         </div>
                         <div class="video-icon">
-                            <a id="Youtube-video" href="https://www.youtube.com/watch?v=_MTbjHKtobY&list=RD_NuwRxt5xPE&index=5"><i class="fa fa-play"></i></a>
+                            <a class="youtube-video" href="https://www.youtube.com/watch?v=CaZXdZGZfb0&list=RDCaZXdZGZfb0&start_radio=1"><i class="fa fa-play"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!--====== Video area section end ======-->
+
+
+        <!--====== Our section start ======-->
+        
+        <section class="service section-padding">
+            <!-- Services Heading -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="section-header">
+                            <h2>Our <span>services</span></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Section content -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="services-box text-center">
+                            <i class="fa fa-desktop"></i>
+                            <h4>Web Design</h4>
+                            <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services-box text-center">
+                            <i class="fa fa-laptop"></i>
+                            <h4>Web Development</h4>
+                            <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services-box text-center">
+                            <i class="fa fa-code"></i>
+                            <h4>App Development</h4>
+                            <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services-box text-center">
+                            <i class="fa fa-comments"></i>
+                            <h4>Live Support</h4>
+                            <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services-box text-center">
+                            <i class="fa fa-life-ring"></i>
+                            <h4>Frendly Support</h4>
+                            <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services-box text-center">
+                            <i class="fa fa-tachometer"></i>
+                            <h4>Super First Web</h4>
+                            <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--====== Our section end ======-->
+
+        <!--====== My skill start ======-->
+                <section class="skill section-padding">
+                     <!-- My skill Heading -->
+                     <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="section-header">
+                                    <h2>My <span>skill</span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- My skill content -->
+                    <div class="container content-top-space"">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="skill-left">
+                                    <h3>Why People Like Us?</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi ut veritatis sequi, pariatur at natus, adipisci quas praesentium et officia est perspiciatis, repellat vitae? Rerum nesciunt, beatae est nostrum.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi ut veritatis sequi, pariatur at natus, adipisci quas praesentium et officia est perspiciatis, repellat vitae? Rerum nesciunt, beatae est nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi ut veritatis sequi, pariatur at natus, adipisci quas praesentium et officia est perspiciatis, repellat vitae? Rerum nesciunt, beatae est nostrum.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="skill-right">
+                                    <h3>We Are Good in</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin</p>
+                                    <div class="mehedi-skill-bar">
+                                        <!-- Start Skill Bar -->
+                                        <div class="skillbar-item">
+                                            <h5 class="skill-bar-title">Web Design</h5>
+                                            <div class="skillbar" data-percent="80">
+                                                <p class="skillbar-bar" style="background: #e67e22;"></p>
+                                                <span class="skill-bar-percent"></span>
+                                            </div>
+                                        </div>
+                                        <div class="skillbar-item">
+                                            <h5 class="skill-bar-title">Web Development</h5>
+                                            <div class="skillbar" data-percent="40">
+                                                <p class="skillbar-bar" style="background: #e67e22;"></p>
+                                                <span class="skill-bar-percent"></span>
+                                            </div>
+                                        </div>
+                                        <div class="skillbar-item">
+                                            <h5 class="skill-bar-title">Javascript</h5>
+                                            <div class="skillbar" data-percent="30">
+                                                <p class="skillbar-bar" style="background: #e67e22;"></p>
+                                                <span class="skill-bar-percent"></span>
+                                            </div>
+                                        </div>
+                                        <div class="skillbar-item">
+                                            <h5 class="skill-bar-title">Wordpress</h5>
+                                            <div class="skillbar" data-percent="60">
+                                                <p class="skillbar-bar" style="background: #e67e22;"></p>
+                                                <span class="skill-bar-percent"></span>
+                                            </div>
+                                        </div>
+                                        <!-- Skill Bar End-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+        <!--====== My skill End ======-->
+
+
+
+
+
+
+
+
 
 
 
@@ -165,6 +308,7 @@
         <script type="text/javascript" src="assets/js/plugin/wow.min.js"></script>
         <script type="text/javascript" src="assets/js/plugin/owl.carousel.min.js"></script>
         <script type="text/javascript" src="assets/js/plugin/jquery.magnific-popup.min.js"></script>
+        <script type="text/javascript" src="assets/js/plugin/skill.bars.jquery.js"></script>
 
         <!--=== All Active ===-->
         <script type="text/javascript" src="assets/js/main.js"></script>
@@ -174,7 +318,7 @@
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
+            e.src='https://www.google-analytics.com/analytics.js'; 
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
