Counter section complite

--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -291,7 +291,44 @@
 
 
 
+<!--====== Counter start ======-->
 
+<div class="counter section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="counter-box">
+                    <p><i class="fa fa-american-sign-language-interpreting"></i></p>
+                    <span class="counter-number">128</span>
+                    <p class="counter-name">happy client</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="counter-box">
+                    <p><i class="fa fa-american-sign-language-interpreting"></i></p>
+                    <span class="counter-number">400</span>
+                    <p class="counter-name">Work Complete</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="counter-box">
+                    <p><i class="fa fa-american-sign-language-interpreting"></i></p>
+                    <span class="counter-number">560</span>
+                    <p class="counter-name">total hours</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="counter-box">
+                    <p><i class="fa fa-american-sign-language-interpreting"></i></p>
+                    <span class="counter-number">600</span>
+                    <p class="counter-name">coffe we drink</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--====== Counter End ======-->
 
 
 
