--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -351,27 +351,42 @@
                             <div class="col-md-12">
                                 <div class="portfolio-menu">
                                     <button type="button" data-filter="all">All</button>
-                                    <button type="button" data-filter="all">Web Design</button>
-                                    <button type="button" data-filter="all">Graphic Design</button>
-                                    <button type="button" data-filter="all">Seo</button>
+                                    <button type="button" data-filter=".webdesign">Web Design</button>
+                                    <button type="button" data-filter=".graphicdesign">Graphic Design</button>
+                                    <button type="button" data-filter=".seo">Seo</button>
                                 </div> 
                             </div>
                         </div>
                         <!-- Portfolio Content  -->
-                        <div class="portfolio-content content-top-space">
+                        <div class="portfolio-content">
                         <div class="row">
-                                <div class="col-md-4">
-                                    <div class="portfolio-item mix">
+                                <div class="col-md-4 mix graphicdesign">
+                                    <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="portfolio-item mix">
+                                <div class="col-md-4  mix webdesign">
+                                    <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="portfolio-item mix">
+                                <div class="col-md-4  mix graphicdesign">
+                                    <div class="portfolio-item">
+                                        <img src="assets/img/1.jpg" alt="portfolio">
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mix seo">
+                                    <div class="portfolio-item">
+                                        <img src="assets/img/1.jpg" alt="portfolio">
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mix webdesign">
+                                    <div class="portfolio-item">
+                                        <img src="assets/img/1.jpg" alt="portfolio">
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mix graphicdesign seo">
+                                    <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
                                     </div>
                                 </div>
