My Team Section

--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -363,31 +363,55 @@
                                 <div class="col-md-4 mix graphicdesign">
                                     <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
+                                        <div class="portfolio-item-hover">
+                                            <a class=".image-link" href="assets/img/1.jpg" target="_blank">
+                                            <i class="fa fa-arrows"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4  mix webdesign">
                                     <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
+                                        <div class="portfolio-item-hover">
+                                            <a class=".image-link" href="assets/img/1.jpg" target="_blank">
+                                            <i class="fa fa-arrows"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4  mix graphicdesign">
                                     <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
+                                        <div class="portfolio-item-hover">
+                                            <a class=".image-link" href="assets/img/1.jpg" target="_blank">
+                                            <i class="fa fa-arrows"></i></a>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mix seo">
+                                <div class="col-md-4 mix seo graphicdesign">
                                     <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
+                                        <div class="portfolio-item-hover">
+                                            <a class=".image-link" href="assets/img/1.jpg" target="_blank">
+                                            <i class="fa fa-arrows"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mix webdesign">
                                     <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
+                                        <div class="portfolio-item-hover">
+                                            <a class=".image-link" href="assets/img/1.jpg" target="_blank">
+                                            <i class="fa fa-arrows"></i></a>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mix graphicdesign seo">
+                                <div class="col-md-4 mix seo graphicdesign">
                                     <div class="portfolio-item">
                                         <img src="assets/img/1.jpg" alt="portfolio">
+                                        <div class="portfolio-item-hover">
+                                            <a class=".image-link" href="assets/img/1.jpg" target="_blank">
+                                            <i class="fa fa-arrows"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -396,7 +420,28 @@
                 </section>
 <!--====== Portfolio End ======-->
 
-
+<!--====== Team Start ======-->
+                <section class="team section-padding"> 
+                        <!-- Services Heading -->
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12 text-center">
+                                    <div class="section-header">
+                                        <h2>My <span>Team</span></h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Services Content -->
+                        <div class="container">
+                            <div class="owl-carousel owl-carousel-team owl-theme">
+                                <div class="item">
+                                    <img src="assets/img/team/team-1.jpg" alt="team-1">
+                                </div>
+                            </div>
+                        </div>
+             </section>
+<!--====== Team End ======-->
 
 
 
