--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -432,15 +432,97 @@
                             </div>
                         </div>
                         <!-- Services Content -->
-                        <div class="container">
+                        <div class="container content-top-space">
                             <div class="owl-carousel owl-carousel-team owl-theme">
-                                <div class="item">
-                                    <img src="assets/img/team/team-1.jpg" alt="team-1">
+                                <div class="team-item">
+                                    <img src="assets/img/team/Team-1.jpg" alt="team-3">
+                                    <!-- Hover Effect -->
+                                    <div class="team-item-hover">
+                                        <div class="team-hover-content">
+                                            <h4 class="team-name">Hanly</h4>
+                                            <ul>
+                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="team-item">
+                                    <img src="assets/img/team/Team-2.jpg" alt="team-1">
+                                    <!-- Hover Effect -->
+                                    <div class="team-item-hover">
+                                        <div class="team-hover-content">
+                                            <h4 class="team-name">Hanly</h4>
+                                            <ul>
+                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="team-item">
+                                    <img src="assets/img/team/Team-3.jpg" alt="team-2">
+                                    <!-- Hover Effect -->
+                                    <div class="team-item-hover">
+                                        <div class="team-hover-content">
+                                            <h4 class="team-name">Hanly</h4>
+                                            <ul>
+                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="team-item">
+                                    <img src="assets/img/team/Team-4.jpg" alt="team-4">
+                                    <!-- Hover Effect -->
+                                    <div class="team-item-hover">
+                                        <div class="team-hover-content">
+                                            <h4 class="team-name">Hanly</h4>
+                                            <ul>
+                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
              </section>
 <!--====== Team End ======-->
+
+
+
+
+<!-- Testimonial Start -->
+<section class="testimonial section-padding">
+    <div class="container">
+        <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+            <div class="owl-carousel owl-carousel-testimonial owl-theme">
+                <div class="item">
+                    <img src="assets/img/testimonial/testimonail-image.jpg" alt="">
+                    <h4 class="testimonial-name">Mehedi Amin</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum tenetur ducimus accusantium consequuntur hic dolore quis, placeat error ad vero.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+<!-- Testimonial End -->
+
+
+
+
 
         <!--==================================================================-->
         <script type="text/javascript"src="assets/js/jquery-3.2.0.min.js"></script>
