testimonial section complite

--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -511,7 +511,7 @@
                 <div class="item">
                     <img src="assets/img/testimonial/testimonail-image.jpg" alt="">
                     <h4 class="testimonial-name">Mehedi Amin</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum tenetur ducimus accusantium consequuntur hic dolore quis, placeat error ad vero.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum tenetur ducimus accusantium consequuntur hic dolore quis, placeat error ad very Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam fuga, doloribus fugit quaerat rerum repudiandae excepturi sunt perspiciatis exercitationem enim libero sequi cum facilis, blanditiis vitae harum? Ipsum, atque ullam. </p>
                 </div>
             </div>
         </div>
@@ -520,6 +520,67 @@
 </section>
 <!-- Testimonial End -->
 
+<!-- Blog Start -->
+
+<section class="blog section-padding">
+            <!-- Services Heading -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="section-header">
+                            <h2>Blog</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Section content -->
+            <div class="container content-top-space">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="assets/img/blog/blog-1.jpg" alt="">
+                            </div>
+                            <article class="blog-details">
+                                <h4 class="blog-title">Web Design Course</h4>
+                                <p class="date"><i class="fa fa-calendar"></i>11 dec 2020</p>
+                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, dignissimos esse exercitationem facere minus.</p>
+                                <a href="#" class="blog-button">Read More</a>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="assets/img/blog/blog-1.jpg" alt="">
+                            </div>
+                            <article class="blog-details">
+                                <h4 class="blog-title">Web Design Course</h4>
+                                <p class="date"><i class="fa fa-calendar"></i>11 dec 2020</p>
+                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, dignissimos esse exercitationem facere minus.</p>
+                                <a href="#" class="blog-button">Read More</a>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="assets/img/blog/blog-1.jpg" alt="">
+                            </div>
+                            <article class="blog-details">
+                                <h4 class="blog-title">Web Design Course</h4>
+                                <p class="date"><i class="fa fa-calendar"></i>11 dec 2020</p>
+                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, dignissimos esse exercitationem facere minus.</p>
+                                <a href="#" class="blog-button">Read More</a>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+</section>
+
+<!-- Blog End-->
 
 
 
