--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -582,7 +582,44 @@
 
 <!-- Blog End-->
 
-
+<!-- Contact start -->
+<section class="contact section-padding">
+            <!-- Services Heading -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="section-header">
+                            <h2>Contact us</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        <!-- section content -->
+        <div class="container content-top-space">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="Your Name">
+                        </div> 
+                        <div class="col-md-6">
+                            <input type="email" class="form-control" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <textarea class="form-control" placeholder="Your Message"></textarea>
+                        </div>
+                        <div class="col-md-12">
+                            <button type="submit">Send Message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+<!-- Contact End -->
 
 
         <!--==================================================================-->
