--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -597,29 +597,56 @@
             
         <!-- section content -->
         <div class="container content-top-space">
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <input type="text" class="form-control" placeholder="Your Name">
-                        </div> 
-                        <div class="col-md-6">
-                            <input type="email" class="form-control" placeholder="Your Email">
+            <form action="#">
+                <div class="row">
+                    <div class="col-md-10 offset-md-1">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" placeholder="Your name">
+                            </div> 
+                            <div class="col-md-6">
+                                <input type="email" class="form-control" placeholder="Your email">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <textarea class="form-control" placeholder="Your Message"></textarea>
-                        </div>
-                        <div class="col-md-12">
-                            <button type="submit">Send Message</button>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <textarea class="form-control" placeholder="Your message"></textarea>
+                            </div>
+                            <div class="col-md-12">
+                                <button type="submit">Send Message</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+        </form>
         </div>
 </section>
 <!-- Contact End -->
+
+
+<!-- footer area start -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="footer-icon">
+                        <ul>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-github"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 text-right">
+                    <p>&copy; Copyright By Mehedi Amin (2020)</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- footer area end-->
 
 
         <!--==================================================================-->
