--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -39,13 +39,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2">
-                            <!-- Logo -->
                             <div class="logo">
                                 <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <!-- Menu -->
                             <nav class="main-menu">
                                     <ul>
                                         <li><a href="#">Home</a></li>
@@ -651,8 +649,8 @@
 
         <!--==================================================================-->
         <script type="text/javascript"src="assets/js/jquery-3.2.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <!--=== All Plugin ===-->
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="assets/js/plugin/wow.min.js"></script>
         <script type="text/javascript" src="assets/js/plugin/owl.carousel.min.js"></script>
